# claude-code-replica-py

./: .gitignore  CLAUDE.md  HANDOFF.md  LICENSE  NOW.md  PROGRESS.md  README.md  RUNTIME_ACTIVATION_PLAN.md  pyproject.toml
automation/: INBOX.md  README.md  RUNBOOK.md
benchmarks/: bench_cache_stability.py  bench_compression_ratio.py  bench_openai_cost.py  bench_sm_compact_latency.py
demo/: 01_tool_result_management.md  02_full_compact.md  03_microcompact.md  README.md
docs/: README.md  memdir.md  plan-mode.md  todo.md
examples/: aggressive_thresholds_demo.py  demo.py  microcompact_demo.py  openai_chat_demo.py  stress_demo.py  visibility_full_demo.py
initiatives/: README.md
scripts/: run_all_milestones.sh  run_next.sh
templates/: handoff_template.md  milestone_prompt_template.md
tests/: test_agent_integration.py  test_aggressive_thresholds_demo.py  test_auto_learn.py  test_bench_sm_compact.py  test_claude_md.py  test_cli.py  test_coding_tools.py  test_compact.py  test_consolidation_lock.py  test_context.py  test_dream_consolidator.py  test_end_to_end_long_session.py  test_enter_plan_mode.py  test_exit_plan_mode.py  test_extract_memories_e2e.py  test_extract_memories_gating.py  test_extract_memories_manifest.py  test_extract_memories_runner.py  test_forked_agent.py  test_has_memory_writes_since.py  test_import.py  test_loop.py  test_loop_memory_injection.py  test_loop_memory_prompt.py  test_loop_session_memory.py  test_loop_write_memory_e2e.py  test_memdir_manifest_format.py  test_memdir_recent_tools.py  test_memdir_scan.py  test_memdir_surfacing.py  (+44 more)
(+155 files in other folders)
