[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-coding-agent"
version = "0.1.0"
description = "A minimal Python coding agent replica studying Claude Code v2.1.88 context and memory management"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
simple-agent = "simple_coding_agent.cli:main"
simple-agent-openai = "simple_coding_agent.openai_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/simple_coding_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
